<resources>
    <string name="app_name">Attendence</string>
    <string name="title_activity_my_navigation_drawer">MyNavigationDrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_attendance_function">AttendanceFunction</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="startdate">StartDate :</string>
    <string name="enddate">EndDate :</string>
    <string name="batch_id">Batch Id :</string>
    <string name="course_id">Course Id :</string>
    <string name="subject_id">Subject Id :</string>
    <string name="batch_time">Batch Time :</string>
    <string name="submit">SUBMIT</string>
</resources>
